[package]
name = "ripemd160"
version = "0.1.1" # Also update html_root_url in lib.rs when bumping this
description = "RIPEMD160 Test"
authors = ["admin@zkbitcoin.com"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"
documentation = "https://docs.rs/ripemd"
repository = "https://github.com/RustCrypto/hashes"
keywords = ["crypto", "ripemd", "hash", "digest"]
categories = ["cryptography", "no-std"]

[dependencies]
ripemd = "0.1.1"
hex-literal = "0.3.4"

[dev-dependencies]

[features]
